[package]
name = "dex-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dex_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
anchor-debug = ["anchor-lang/anchor-debug"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
check-deadline = []
custom-heap = []
custom-panic = []
staging = ["log-heap-usage"]
log-metrics = []
log-heap-usage = ["log-metrics"]
log-cu-usage = ["log-metrics"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "event-cpi"]}
anchor-spl = "0.31.1"
arrayref = "0.3.7"
num_enum = "0.7.2"
bytemuck = "^1"
strum = {version = "0.27.2", features = ["derive"]}
pinocchio-log = "0.5.1"
arrayvec = "0.7.6"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
